# eq-translations

./: .coveragerc  .flake8  .gcloudignore  .gitignore  .pylintrc  .travis.yml  Dockerfile  Makefile  Pipfile  README.md  deploy.sh  main.py  pyproject.toml  requirements.txt  setup.py
.github/: CODEOWNERS
.github/workflows/: codeql-analysis.yml  main.yml  master.yml  pull_request.yml
app/: extract_translation_data.py  merge-translations.py  schema_translation.py  survey_schema.py  template_extractor.py  test_translate_survey.py  translate_survey.py  utils.py
cli/: compare_schemas.py  extract_census_template.py  template_extractor.py  translate_all_surveys.py  translate_census.py  translate_survey.py
doc/decisions/: 0001-context-in-translations.md
eq_translations/: __init__.py  entrypoints.py  extractable_strings.py  schema_translation.py  survey_schema.py  translatable_item.py  utils.py  validate_translation.py
eq_translations.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
eq_translations/cli/: compare_schemas.py  extract_template.py  template_extractor.py  translate_all_surveys.py  translate_census.py  (+2 more)
scripts/: install.sh  run_translate_all_surveys.sh  run_translate_survey.sh  run_translation_extract.sh  uninstall.sh
tests/: conftest.py  test_dumb_smart_quotes.py  test_extract_data.py  test_pointers.py  test_schema_translation.py  test_survey_schema.py  test_survey_schema_extraction.py  test_survey_schema_translation.py  test_translate_json.py  test_translation_translate.xlsx  test_utils.py  test_validate_translation.py
translations/: census_household_translate_cy.xlsx  census_household_translate_cy_previous.xlsx  census_household_translate_welsh.xlsx  census_individual_translate_cy.xlsx  census_individual_translate_cy_previous.xlsx  census_individual_translate_welsh.xlsx  extract_translation_data.py  lms_2_translate_cy.xlsx  test_language_translate_cy.xlsx  test_translate_survey.py  test_translation_translate_cy.po  translate_survey.py
(+21 files in other folders)
